--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-  <a href="{{url_for('login')}}">Login Page</a>
+  <a href="{{url_for('login')}}">Login Page</a><br>
+  <a href="{{url_for('register')}}">Registration Page</a>
 </body>
 </html>
