--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register</title>
 </head>
 <body>
     {% for message in get_flashed_messages() %}
@@ -12,13 +11,14 @@
       {{message}}
     </div>
     {% endfor %}
-    <h1>Login Page</h1>
-    <form method="POST" action="">
+        <h1>Registration Page</h1>
+        <form method="POST" action="">
         {{ form.hidden_tag() }}
         {{ form.username }}
+        {{ form.name }}
         {{ form.password }}
         {{ form.submit }}
     </form>
-    <a href="{{url_for('register')}}">sign up</a>
+    <a href="{{url_for('login')}}">log in</a>
 </body>
 </html>
